references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/Verification_invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:2dc22fea63970ae0274ca17cc24c9d082f6007d1cfd7e9f77a78178e7af29026
size 3006
